--- a/src/app/components/highlights-banner/highlights-banner.component.html
+++ b/src/app/components/highlights-banner/highlights-banner.component.html
@@ -1,1 +1,3 @@
-<p>highlights-banner works!</p>
+<section (click)="nextSlide(next)" class="max-container">
+  <app-banner-slide [next]="next" [slides]="slides"></app-banner-slide>
+</section>
