--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,1 +1,29 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
+//fonts
+.poppins-bold-20 {
+  font-family: "Poppins";
+  font-weight: bold;
+  font-size: 20px;
+}
+.poppins-medium-16 {
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 16px;
+}
+.volkhov-bold-70 {
+  font-family: "Volkhov";
+  font-weight: bold;
+  font-size: 70px;
+}
+
+//colors
+.orange {
+  color: $orange-color;
+}
+.dark-blue {
+  color: $dark-blue;
+}
+.grey {
+  color: $grey;
+}
