--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -9,11 +9,11 @@
   </div>
 
   <ul class="flex-space-between nav-pages">
-    <li><a routerLink="" routerLinkActive="active">Home</a></li>
-    <li><a routerLink="about" routerLinkActive="active">About us</a></li>
-    <li><a routerLink="news" routerLinkActive="active">News</a></li>
+    <li><a routerLink="">Home</a></li>
+    <li><a routerLink="about">About us</a></li>
+    <li><a routerLink="news">News</a></li>
     <li>
-      <a routerLink="contact-us" routerLinkActive="active">Contact us</a>
+      <a routerLink="contact-us">Contact us</a>
     </li>
   </ul>
   <div class="nav-buttons">
