--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -11,15 +11,21 @@
   font-weight: 400;
   font-size: 16px;
 }
-.volkhov-bold-70 {
+.volkhov-bold-65 {
   font-family: "Volkhov";
   font-weight: bold;
-  font-size: 70px;
+  font-size: 65px;
 }
 
 //colors
 .orange {
   color: $orange-color;
+}
+.green {
+  color: $green-color;
+}
+.purple {
+  color: $purple-color;
 }
 .dark-blue {
   color: $dark-blue;
