--- a/src/app/components/banner-slide/banner-slide.component.scss
+++ b/src/app/components/banner-slide/banner-slide.component.scss
@@ -10,10 +10,24 @@
 }
 .header-img {
   top: 65px;
-  width: max(670px);
 }
+
 .circle {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
+  cursor: pointer;
+}
+.circle:hover {
+  scale: 1.2;
+}
+.dotted-line {
+  border-top: 4px dotted #000;
+  width: 80px;
+}
+.img-container {
+  width: clamp(350px, 50%, 500px);
+}
+.text-container {
+  width: clamp(350px, 50%, 500px);
 }
