things we do section

--- a/src/app/components/things-we-do/things-we-do.component.html
+++ b/src/app/components/things-we-do/things-we-do.component.html
@@ -1,1 +1,24 @@
-<p>things-we-do works!</p>
+<section class="max-container px-4 bg-grey">
+  <div class="flex-center-start py-4">
+    <div class="flex-center img-container">
+      <div class="card-col-1">
+        <app-products-card [imgCard]="1"></app-products-card>
+      </div>
+      <div class="flex-center-col card-col-2">
+        <app-products-card [imgCard]="2"></app-products-card>
+        <app-products-card [imgCard]="3"></app-products-card>
+      </div>
+      <div class="flex-center-col card-col-3">
+        <app-products-card [imgCard]="4"></app-products-card>
+        <app-products-card [imgCard]="5"></app-products-card>
+      </div>
+    </div>
+    <div class="bg-purple text-container">
+      <h2 class="poppins-bold-50 blueish">We Deliver Digital Products</h2>
+      <p class="sans-reg-20 white">
+        We craft technology solutions that digitally bond and transform the
+        productivity of our customers and citizens , workers, consumers,partners
+      </p>
+    </div>
+  </div>
+</section>
