things we do section

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -11,6 +11,11 @@
   font-weight: bold;
   font-size: 50px;
 }
+.poppins-bold-75 {
+  font-family: "Poppins";
+  font-weight: bold;
+  font-size: 75px;
+}
 .poppins-extrabold-16 {
   font-family: "Poppins";
   font-weight: bolder;
