--- a/src/app/components/products-card/products-card.component.html
+++ b/src/app/components/products-card/products-card.component.html
@@ -1,4 +1,15 @@
-<div class="product-card">
-  <img src="../../../assets/card-{{ imgCard }}.png" alt="" />
-  <h4 class="poppins-extrabold-16 white">Test</h4>
+<div class="cover-container">
+  <a routerLink="#">
+    <img
+      src="../../../assets/card-{{ imgCard }}.png"
+      class="cover-image"
+      alt="Cover Image"
+    />
+    <div class="text-container">
+      <p class="poppins-extrabold-16 white">{{ text }}</p>
+    </div>
+    <div class="overlay-hover">
+      <p class="white">&rarr;Read More</p>
+    </div>
+  </a>
 </div>
