--- a/src/app/components/things-we-do/things-we-do.component.scss
+++ b/src/app/components/things-we-do/things-we-do.component.scss
@@ -10,10 +10,10 @@
   position: relative;
   z-index: 0;
   margin-right: 5rem;
-  padding: 2rem 0rem 0rem 10rem;
+  // padding: 2rem 0rem 0rem 10rem;
   h2 {
-    padding: 1rem 3rem;
-    margin-left: 14rem;
+    padding: 1rem 6rem;
+    // margin-left: 14rem;
   }
   p {
     padding-left: 3rem;
@@ -23,4 +23,17 @@
   position: relative;
   z-index: 1;
   right: -200px;
+}
+.bg-placeholder {
+  width: 400px;
+}
+section {
+  position: relative;
+  .section-shadow-text {
+    position: absolute;
+    top: 0;
+    left: -25px;
+    text-shadow: 1px -10px 1px #ffffff09;
+    width: 100px;
+  }
 }
