--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -31,8 +31,21 @@
   font-weight: 400;
   font-size: 16px;
 }
+.poppins-regular-16 {
+  font-family: "Poppins";
+  font-size: 16px;
+}
+.poppins-regular-12 {
+  font-family: "Poppins";
+  font-size: 12px;
+}
 .volkhov-bold-65 {
   font-family: "Volkhov";
   font-weight: bold;
   font-size: 65px;
+}
+.volkhov-bold-50 {
+  font-family: "Volkhov";
+  font-weight: bold;
+  font-size: 50px;
 }
