--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,23 +13,29 @@ a {
 }
 //flex classes
 .flex-space-between {
-  @include flex(row, space-between, center);
+  @include flex(row, space-between, center, wrap);
 }
 .flex-center {
-  @include flex(row, center, center);
+  @include flex(row, center, center, nowrap);
+}
+.flex-center-wrap {
+  @include flex(row, center, center, wrap);
 }
 .flex-center-start {
-  @include flex(row, center, start);
+  @include flex(row, center, start, nowrap);
 }
 .flex-start-end {
-  @include flex(row, start, end);
+  @include flex(row, start, end, wrap);
 }
 .flex-justify-center {
-  @include flex(row, start, center);
+  @include flex(row, start, center, wrap);
   gap: 44px;
 }
+.flex-start-start {
+  @include flex(row, start, flex-start, wrap);
+}
 .flex-center-col {
-  @include flex(column, center, center);
+  @include flex(column, center, center, wrap);
 }
 
 //container
@@ -40,6 +46,9 @@ a {
 //padding
 .px-2 {
   padding: 0 2rem;
+}
+.px-1 {
+  padding: 0 1rem;
 }
 .px-4 {
   padding: 0 4rem;
@@ -65,6 +74,9 @@ a {
 .py-1 {
   padding: 1rem 0rem;
 }
+.mx-1 {
+  margin: 0rem 1rem;
+}
 //buttons
 .btn-orange {
   padding: 1rem 2rem;
@@ -76,6 +88,22 @@ a {
   font-family: "Poppins";
   cursor: pointer;
   transition: 0.5s ease-in-out;
+}
+.btn-grey {
+  padding: 0.5rem 1rem;
+  background: #e3e3e3;
+  color: $dark-blue;
+  border: none;
+  border-radius: 5px;
+  margin-right: 5px;
+  font-family: "Poppins";
+  cursor: pointer;
+  transition: 0.5s ease-in-out;
+}
+.btn-grey:hover,
+.btn-grey.active {
+  background: #0eceff;
+  color: white;
 }
 .btn-noBorder {
   padding: 1rem 2rem;
