--- a/src/app/components/news-card/news-card.component.html
+++ b/src/app/components/news-card/news-card.component.html
@@ -21,7 +21,9 @@
       <p class="px-1 poppins-regular-16 grey">{{ news.publishedDate }}</p>
     </div>
     <div class="flex-space-between">
-      <p class="category poppins-regular-12">category</p>
+      <p class="category poppins-regular-12">
+        {{ news.categoryName }}
+      </p>
       <div class="share-icon flex-space-between">
         <div>
           <svg
