--- a/src/app/components/news-card/news-card.component.html
+++ b/src/app/components/news-card/news-card.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="img-container">
-    <img class="card-img-top" [src]="news.urlToImage" alt="Card image cap" />
+    <img class="card-img-top" [src]="news.urlToImage" [alt]="news.title" />
   </div>
   <div class="card-body">
     <h5 class="card-title poppins-medium-16">
