fixing design bugs

--- a/src/app/components/banner-slide/banner-slide.component.html
+++ b/src/app/components/banner-slide/banner-slide.component.html
@@ -1,4 +1,4 @@
-<div class="flex-center-start mr-4" id="banner">
+<div class="flex-center-start" id="banner">
   <div class="shape">
     <svg
       xmlns="http://www.w3.org/2000/svg"
@@ -41,6 +41,7 @@
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 512 512"
           width="50px"
+          id="play-btn"
         >
           <path
             fill="#e72226"
@@ -72,7 +73,6 @@
       src="../../../assets/{{ slides[next].order }}.png"
       alt="header-img"
       class="header-img mr-4"
-      height="500px"
     />
   </div>
 </div>
