--- a/src/app/components/products-card/products-card.component.scss
+++ b/src/app/components/products-card/products-card.component.scss
@@ -43,3 +43,9 @@
   padding-bottom: 20px;
   padding-left: 27px;
 }
+@media (max-width: 575.98px) {
+  cover-container {
+    width: 100px;
+    height: 100px;
+  }
+}
