--- a/src/app/components/things-we-do/things-we-do.component.html
+++ b/src/app/components/things-we-do/things-we-do.component.html
@@ -1,6 +1,6 @@
 <section class="max-container px-4 bg-grey">
   <p class="section-shadow-text poppins-bold-75 white">Things We Do</p>
-  <div class="flex-center-start py-4">
+  <div class="flex-center-start py-4 container">
     <div class="flex-center img-container">
       <div class="card-col-1">
         <app-products-card
