--- a/src/app/components/things-we-do/things-we-do.component.scss
+++ b/src/app/components/things-we-do/things-we-do.component.scss
@@ -9,7 +9,7 @@
   height: 460px;
   position: relative;
   z-index: 0;
-  margin-right: 5rem;
+  // margin-right: 5rem;
   // padding: 2rem 0rem 0rem 10rem;
   h2 {
     padding: 1rem 6rem;
@@ -35,5 +35,23 @@ section {
     left: -25px;
     text-shadow: 1px -10px 1px #ffffff09;
     width: 100px;
+  }
+}
+@media (max-width: 991.98px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    flex-flow: column-reverse;
+    align-items: center;
+    justify-content: center;
+  }
+  .bg-placeholder {
+    display: none;
+  }
+  .text-container {
+    width: 100%;
+  }
+  .img-container {
+    right: 0;
   }
 }
