fixing responsive issues

--- a/src/app/components/banner-slide/banner-slide.component.html
+++ b/src/app/components/banner-slide/banner-slide.component.html
@@ -72,7 +72,7 @@
     <img
       src="../../../assets/{{ slides[next].order }}.png"
       alt="header-img"
-      class="header-img mr-4"
+      class="header-img"
     />
   </div>
 </div>
