--- a/src/app/components/latest-news/latest-news.component.html
+++ b/src/app/components/latest-news/latest-news.component.html
@@ -2,7 +2,7 @@
   <div class="flex-center-col">
     <h4 class="poppins-extrabold-16 py-1">Media</h4>
     <h2 class="volkhov-bold-50 py-1">Top News</h2>
-    <div class="flex-center">
+    <div class="flex-centerwrap">
       <button class="btn-grey active">All News</button>
       <button
         *ngFor="let category of allCategories"
