fixing section two responsive

--- a/src/app/components/things-we-do/things-we-do.component.html
+++ b/src/app/components/things-we-do/things-we-do.component.html
@@ -1,4 +1,4 @@
-<section class="max-container px-4 bg-grey">
+<section class="max-container bg-grey">
   <p class="section-shadow-text poppins-bold-75 white">Things We Do</p>
   <div class="flex-center-start py-4 container">
     <div class="flex-center img-container">
