--- a/src/app/components/things-we-do/things-we-do.component.scss
+++ b/src/app/components/things-we-do/things-we-do.component.scss
@@ -12,8 +12,11 @@
   // margin-right: 5rem;
   // padding: 2rem 0rem 0rem 10rem;
   h2 {
-    padding: 1rem 6rem;
+    padding: 1rem 3rem;
     // margin-left: 14rem;
+  }
+  p {
+    padding: 0rem 2rem;
   }
 }
 .img-container {
